--- a/views/index.ejs
+++ b/views/index.ejs
@@ -345,31 +345,33 @@
                 </div>
             </div>
         </div>
-        <div class="airplan section">
+        <!-- <div class="airplan section">
             <div class="center">
                 <div class="air">
-                    <div class="img"><!--제주항공--></div>
+                    <div class="img"></div>
                     <p class="air_name">제주항공</p>
                 </div>
                 <div class="air">
-                    <div class="img"><!--아시아나항공--></div>
+                    <div class="img"></div>
                     <p class="air_name">아시아나항공</p>
                 </div>
                 <div class="air">
-                    <div class="img"><!--대한항공--></div>
+                    <div class="img"></div>
                     <p class="air_name">대한항공</p>
                 </div>
                 <div class="air">
-                    <div class="img"><!--티웨이항공--></div>
+                    <div class="img"></div>
                     <p class="air_name">티웨이항공</p>
                 </div>
                 <div class="air">
-                    <div class="img"><!--항공--></div>
+                    <div class="img"></div>
                     <p class="air_name">제주항공</p>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
     <%- include("common/footer.ejs"); %>
+    <!-- js -->
+    <script src="/js/slide.js"></script>
 </body>
 </html>
