--- a/views/travel_hotel.ejs
+++ b/views/travel_hotel.ejs
@@ -14,7 +14,7 @@
         <div class="where">
             <div class="center">
                 <h3 class="title">어디로 가시나요?</h3>
-                <div class="popular_local">
+                <div class="sub_popular_local">
                     <p class="subtitle">최근 인기많은 지역</p>
                     <div class="local_list_wrap">
                         <!-- 나중에 반복문으로 만들어보기 -->
